set(
  QUICK_GUI_SRCS
  QuickGUIBrush.cpp
  QuickGUIButton.cpp
  QuickGUICharacter.cpp
  QuickGUICheckBox.cpp
  QuickGUIColorPicker.cpp
  QuickGUIComboBox.cpp
  QuickGUIComponentWidget.cpp
  QuickGUIConsole.cpp
  QuickGUIContainerWidget.cpp
  QuickGUIContextMenu.cpp
  QuickGUIDefinitionProperty.cpp
  QuickGUIDescManager.cpp
  QuickGUIDropDragSlot.cpp
  QuickGUIDropDropSlotItem.cpp
  QuickGUIEventHandlerManager.cpp
  QuickGUIException.cpp
  QuickGUIFactoryManager.cpp
  QuickGUIForwardDeclaredDesc.cpp
  QuickGUIHScrollBar.cpp
  QuickGUIImage.cpp
  QuickGUILabel.cpp
  QuickGUIList.cpp
  QuickGUIListImageItem.cpp
  QuickGUIListItem.cpp
  QuickGUIListPanelItem.cpp
  QuickGUIListTextItem.cpp
  QuickGUIManager.cpp
  QuickGUIMenu.cpp
  QuickGUIMenuImageItem.cpp
  QuickGUIMenuItem.cpp
  QuickGUIMenuPanel.cpp
  QuickGUIMenuTextItem.cpp
  QuickGUIModalWindow.cpp
  QuickGUIMouseCursor.cpp
  QuickGUIOgreEquivalents.cpp
  QuickGUIPanel.cpp
  QuickGUIPoint.cpp
  QuickGUIProgressBar.cpp
  QuickGUIPropertyGridBoolProperty.cpp
  QuickGUIPropertyGridComboBoxProperty.cpp
  QuickGUIPropertyGrid.cpp
  QuickGUIPropertyGridItem.cpp
  QuickGUIPropertyGridSection.cpp
  QuickGUIPropertyGridTextProperty.cpp
  QuickGUIRadioButton.cpp
  QuickGUIRect.cpp
  QuickGUIRoot.cpp
  QuickGUIScriptDefinition.cpp
  QuickGUIScriptReader.cpp
  QuickGUIScriptWriter.cpp
  QuickGUISerialBase.cpp
  QuickGUISerialReader.cpp
  QuickGUISerialWriter.cpp
  QuickGUISheet.cpp
  QuickGUISheetManager.cpp
  QuickGUISize.cpp
  QuickGUISkinDefinition.cpp
  QuickGUISkinDefinitionManager.cpp
  QuickGUISkinElement.cpp
  QuickGUISkinReference.cpp
  QuickGUISkinType.cpp
  QuickGUISkinTypeManager.cpp
  QuickGUIStringConverter.cpp
  QuickGUITabControl.cpp
  QuickGUITab.cpp
  QuickGUITabPage.cpp
  QuickGUITextArea.cpp
  QuickGUITextBox.cpp
  QuickGUIText.cpp
  QuickGUITextCursor.cpp
  QuickGUITextLine.cpp
  QuickGUITextUser.cpp
  QuickGUITimer.cpp
  QuickGUITimerManager.cpp
  QuickGUITitleBar.cpp
  QuickGUIToolBar.cpp
  QuickGUIToolBarItem.cpp
  QuickGUITreeViewCheckBoxNode.cpp
  QuickGUITreeView.cpp
  QuickGUITreeViewNode.cpp
  QuickGUITreeViewRadioButtonNode.cpp
  QuickGUIUVRect.cpp
  QuickGUIVScrollBar.cpp
  QuickGUIWidget.cpp
  QuickGUIWindow.cpp
  )

add_library(QuickGUI STATIC ${QUICK_GUI_SRCS})
